// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scrollable Horizontal Component Should Inverse mode render successfully 1`] = `
<body>
  <div>
    <div
      class="rt-Box container inverse"
    >
      <div
        class="rt-Box header"
      >
        <div
          class="rt-Flex rt-r-fd-column contentHeader"
        >
          <p
            class="rt-Text mocked-class-name typography-font-family-default heading"
            id=""
          >
            Impact Summary
          </p>
          <p
            class="rt-Text mocked-class-name typography-font-family-default description"
            id=""
          >
            Discover our global impact and collective support for communities.
          </p>
        </div>
      </div>
      <div
        class="root body"
        dir="ltr"
        style="position: relative; --radix-scroll-area-corner-width: 0px; --radix-scroll-area-corner-height: 0px;"
      >
        <style>
          [data-radix-scroll-area-viewport]{scrollbar-width:none;-ms-overflow-style:none;-webkit-overflow-scrolling:touch;}[data-radix-scroll-area-viewport]::-webkit-scrollbar{display:none}
        </style>
        <div
          class="viewport"
          data-radix-scroll-area-viewport=""
          style="overflow-x: scroll; overflow-y: hidden;"
          tabindex="0"
        >
          <div
            style="min-width: 100%; display: table;"
          >
            <div
              class="rt-Flex contentContainer"
            >
              <div
                class="rt-reset rt-BaseCard rt-Card rt-r-size-1 rt-variant-surface dataCardContainer size-1 default"
              >
                <div
                  class="rt-Box headerContainer"
                >
                  <div
                    class="rt-Box header"
                  >
                    <p
                      class="rt-Text mocked-class-name typography-font-family-default heading"
                      id=""
                    >
                      4M+
                    </p>
                    <p
                      class="rt-Text mocked-class-name typography-font-family-default subHeading"
                      id=""
                    >
                      People served
                    </p>
                  </div>
                  <p
                    class="rt-Text mocked-class-name typography-font-family-default content"
                    id=""
                  >
                    Our livelihood improvement programs enable millions globally to reach better outcomes
                  </p>
                </div>
                <div
                  class="rt-Box footer"
                >
                  <div
                    class="tagComp"
                    style="pointer-events: none;"
                  >
                    <span
                      class="rt-reset rt-Badge rt-r-size-1 rt-variant-soft default"
                      data-accent-color=""
                      style="padding-inline: 4px 12px; border-radius: 20px; cursor: unset; width: auto; max-width: 100%; height: 32px; padding-block: 0;"
                      tabindex="0"
                    >
                      <span
                        class="rt-reset rt-AvatarRoot rt-r-size-1 rt-variant-soft"
                        data-accent-color=""
                        data-radius="full"
                      >
                        <span
                          class="rt-AvatarFallback"
                        />
                      </span>
                      <span
                        class="rt-Text rt-truncate mocked-class-name typography-font-family-default tagText"
                        id=""
                      >
                        Water
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Scrollable Horizontal Component Should Primary mode render successfully 1`] = `
<body>
  <div>
    <div
      class="rt-Box container primary"
    >
      <div
        class="rt-Box header"
      >
        <div
          class="rt-Flex rt-r-fd-column contentHeader"
        >
          <p
            class="rt-Text mocked-class-name typography-font-family-default heading"
            id=""
          >
            Impact Summary
          </p>
          <p
            class="rt-Text mocked-class-name typography-font-family-default description"
            id=""
          >
            Discover our global impact and collective support for communities.
          </p>
        </div>
      </div>
      <div
        class="root body"
        dir="ltr"
        style="position: relative; --radix-scroll-area-corner-width: 0px; --radix-scroll-area-corner-height: 0px;"
      >
        <style>
          [data-radix-scroll-area-viewport]{scrollbar-width:none;-ms-overflow-style:none;-webkit-overflow-scrolling:touch;}[data-radix-scroll-area-viewport]::-webkit-scrollbar{display:none}
        </style>
        <div
          class="viewport"
          data-radix-scroll-area-viewport=""
          style="overflow-x: scroll; overflow-y: hidden;"
          tabindex="0"
        >
          <div
            style="min-width: 100%; display: table;"
          >
            <div
              class="rt-Flex contentContainer"
            >
              <div
                class="rt-reset rt-BaseCard rt-Card rt-r-size-1 rt-variant-surface dataCardContainer size-1 surface"
              >
                <div
                  class="rt-Box headerContainer"
                >
                  <div
                    class="rt-Box header"
                  >
                    <p
                      class="rt-Text mocked-class-name typography-font-family-default heading"
                      id=""
                    >
                      4M+
                    </p>
                    <p
                      class="rt-Text mocked-class-name typography-font-family-default subHeading"
                      id=""
                    >
                      People served
                    </p>
                  </div>
                  <p
                    class="rt-Text mocked-class-name typography-font-family-default content"
                    id=""
                  >
                    Our livelihood improvement programs enable millions globally to reach better outcomes
                  </p>
                </div>
                <div
                  class="rt-Box footer"
                >
                  <div
                    class="tagComp"
                    style="pointer-events: none;"
                  >
                    <span
                      class="rt-reset rt-Badge rt-r-size-1 rt-variant-soft default"
                      data-accent-color=""
                      style="padding-inline: 4px 12px; border-radius: 20px; cursor: unset; width: auto; max-width: 100%; height: 32px; padding-block: 0;"
                      tabindex="0"
                    >
                      <span
                        class="rt-reset rt-AvatarRoot rt-r-size-1 rt-variant-soft"
                        data-accent-color=""
                        data-radius="full"
                      >
                        <span
                          class="rt-AvatarFallback"
                        />
                      </span>
                      <span
                        class="rt-Text rt-truncate mocked-class-name typography-font-family-default tagText"
                        id=""
                      >
                        Food
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
